--- a/style.css
+++ b/style.css
@@ -74,10 +74,11 @@ footer {
   background-size: contain;
   background-repeat: no-repeat;
   opacity: 0.6;
-  animation: floatUp 20s linear infinite;
+  animation: floatUp 20s linear infinite, butterflyGlow 6s ease-in-out infinite;
   pointer-events: none;
   z-index: 0;
 }
+
 
 @keyframes floatUp {
   0% {
