--- a/style.css
+++ b/style.css
@@ -93,3 +93,11 @@ footer {
     opacity: 0;
   }
 }
+@keyframes butterflyGlow {
+  0%, 100% {
+    filter: drop-shadow(0 0 3px #ffcad4);
+  }
+  50% {
+    filter: drop-shadow(0 0 12px #ffcad4);
+  }
+}
